--- a/history.tex
+++ b/history.tex
@@ -19,8 +19,8 @@ which were inked and pressed against paper.
 By March of 1977, Knuth was ready for a second run of \acronym{taocp}, volume~2,
 but he was horrified when he received the proofs.
 Hot metal typesetting is expensive, complicated, and time-consuming,
-so publishers instead set this new edition with phototypesetting,
-which works by projecting characters' images onto film.
+so Knuth's publisher had replaced it with phototypesetting,
+a process that projects characters' images onto film.
 The new technology, while cheaper and faster,
 didn't provide the quality Knuth
 expected.\punckern\endnote{Knuth, \textit{Digital Typography} (Stanford, 1999), 3--5}
