--- a/math.tex
+++ b/math.tex
@@ -17,7 +17,7 @@ In these math environments, the rules of \LaTeX{} change:
 \item Letters are automatically italicized, as they are assumed to be variables.
 \end{itemize}
 To return to normal ``text mode'' inside a formula, use the \verb|\text| command.
-Normal formatting works in these blocks.
+Standard formatting commands work in these blocks.
 From
 \begin{leftfigure}
 \begin{lstlisting}
