--- a/punctuation.tex
+++ b/punctuation.tex
@@ -53,30 +53,30 @@ serve different purposes.
     \textit{Practical Typography},
     \https{practicaltypography.com/hyphens-and-dashes.html}}
     \begin{itemize}[leftmargin=*]
-    \item They allow a word to be split between the end of one line and the
+    \item They allow words to be split across the end of one line and the
         start of the next.
         \LaTeX{} usually handles this automatically.
-    \item Some compound words use hyphens, like \emph{long-range}
-        and \emph{field-effect}.
+    \item Compound words like \emph{long-range} and \emph{field-effect}
+        use hyphens.
     \item They are used in phrasal adjectives.
         If I ask for ``five dollar bills''\punckern,
         do I want five \$1 bills, or several \$5 bills?
         It's clearer that I want the latter when typeset as
         \emph{five-dollar bills}.
     \end{itemize}
-    Unsurprisingly, they are produced with the hyphen character (\,\texttt{-}\,).
+    Unsurprisingly, you get one by typing the hyphen character (\,\texttt{-}\,).
 
 \item[En dashes] are for ranges such as ``pages 4--12''\quotekern,
     and connected words, like ``the \mbox{US--Canada} border''\quotekern.
     \LaTeX{} places one wherever it sees two adjacent hyphens
     (\,\texttt{--}\,).
 
-\item[Em dashes] are used to separate clauses of a sentence.
+\item[Em dashes] separate clauses of a sentence.
     Other punctuation---like parenthesis and commas---play a similar
     role.
     Em dashes are typeset with three hyphens (\,\texttt{---}\,).
 
-\item[Minus signs] are used for negative quantities and
+\item[Minus signs] are for negative quantities and
     mathematical expressions.
     They are similar in length to an en dash,
     but sit at a different height.
@@ -124,7 +124,7 @@ produces proper spacing:
 Please call Ms.~Shrdlu.
 \end{leftfigure}
 
-In other occasions, such as when we abbreviate units of
+In other occasions, like when we abbreviate units of
 measurement,\punckern\footnote{There are also dedicated packages for doing so,
 like \texttt{siunitx}.}
 we want thinner spaces than our usual inter-word ones.
