--- a/international.tex
+++ b/international.tex
@@ -8,7 +8,7 @@ You may write with them.
 
 Digitizing written language is a complicated topic that has evolved significantly
 since \LaTeX's inception.
-Today, computers usually represent text with Unicode. Briefly,
+Today, most computer systems use Unicode to represent text. Briefly,
 \begin{itemize}
 \item A Unicode text file is a series of \introduce{code points}.
     Each represents a character to be drawn,
