--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -3,7 +3,7 @@
 \section{Justification and alignment}
 
 \LaTeX{} justifies text remarkably well.
-Instead of considering one line at a time---like most word processors,
+Instead of arranging one line at a time---like most word processors,
 web browsers, and e-readers do---it considers every possible line break
 in a paragraph, then picks the ones that give the best overall
 spacing.\punckern\endnote{Donald E.~Knuth and Michael F.~Plass,
@@ -98,7 +98,7 @@ you get
 \end{enumerate}
 \end{lstlisting}
 \end{leftfigure}
-produces
+becomes
 \begin{leftfigure}
 \lm%
 \begin{enumerate}[leftmargin=*]
@@ -110,7 +110,7 @@ produces
 
 \bigskip
 \noindent The \texttt{description} environment starts each item with some
-emphasized \introduce{label},
+emphasized label,
 then indents all subsequent lines for that item:
 \begin{leftfigure}
 \begin{lstlisting}
@@ -149,9 +149,9 @@ gives us
 
 \section{Columns}
 
-We often split layouts into several columns, especially when printing on
+We often split pages into several columns, especially when printing on
 \textsc{a4} or \acronym{us}~\textsc{l}etter paper,
-since it provides more comfortable line widths at standard
+since it provides more comfortable line widths with standard
 8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
 on where you look, but as a rule of thumb,
 aim for 45 to 80 characters (including spaces) per line.
@@ -164,8 +164,8 @@ which splits everything in two, or you can use the \texttt{multicols}
 environment from the \texttt{multicol} package:
 \begin{leftfigure}
 \begin{lstlisting}
-One nice feature of \texttt{multicol} is that you can
-combine arbitrary layouts.
+One nice feature of the \texttt{multicol} package
+is that you can combine arbitrary layouts.
 \begin{multicols}{2}
 This example starts with one column,
 then sets the following section as two.
@@ -177,8 +177,8 @@ inside it so that each column is about the same height.
 is split into
 \begin{leftfigure}
 \lm%
-One nice feature of {\lt multicol} is that you can
-combine arbitrary layouts.
+One nice feature of the {\lt multicol} package
+is that you can combine arbitrary layouts.
 \begin{multicols}{2}
 This example starts with one column,
 then sets the following section as two.
@@ -197,7 +197,7 @@ printing, you can break to the front of the next page with
 
 \section{Footnotes}
 
-Footnotes are useful for inserting references,
+Footnotes are useful for references,
 or for remarks that readers might find helpful
 but aren't crucial to the main text.
 The \verb|\footnote| command places a marker at its location in the
@@ -216,15 +216,14 @@ I love footnotes!\footnote{Perhaps a bit too much\dots}
 
 \section{What next?}
 \begin{itemize}
-\item Control paragraph spacing, either with
-KOMA~Script, or with the \texttt{parskip} package.
+\item Control paragraph spacing with KOMA~Script or the \texttt{parskip} package.
 \item Set the page size and margins with the \texttt{geometry} package.
 \item Customize list formatting with the \texttt{enumitem} package.
 \item Create tables with the \texttt{tabular} environment.
 \item Align text with tab stops using the \texttt{tabbing} environment.
-\item Customize footnote symbols and layout with the
-    \texttt{footmisc} package and KOMA~Script.
-\item Create horizontal and vertical space with commands such as
+\item Customize footnote symbols and layout with KOMA~Script and the
+    \texttt{footmisc} package.
+\item Insert horizontal and vertical space with commands like
     \verb|\vspace|, \verb|\hspace|, \verb|\vfill|, and \verb|\hfill|.
 \item Learn what units \LaTeX{} provides for specifying spacing. \\
     (We've already mentioned a few here, like
