Read-through to selecting font files

--- a/fonts.tex
+++ b/fonts.tex
@@ -21,7 +21,7 @@ more ubiquitous formats.}
     TrueType files generally end in a \monobox{.ttf} extension.
 \item[OpenType] was first released by Microsoft and Adobe in 1996.
     Improvements over TrueType include its ability to embed
-    various ``features''\quotekern, such as alternative glyphs
+    various features, such as alternative glyphs
     and spacing options, into a single file.
     OpenType files usually end in an \monobox{.otf} extension.
 \end{description}
@@ -106,13 +106,13 @@ other fonts in our document.\punckern\footnote{Compare how
 {\fontspec[Scale=MatchLowercase]{Futura-Med}and medium weights}
 of Futura look next to the rest of the type on this page.}
 Continuing to use Futura as an example,
-say we want to use the ``book'' weight as our default
+say we want ``book'' as our default weight
 and ``demi'' for bold.
 Assuming the font files are named:
 \begin{itemize}
-\item \monobox{Futura-Boo} for our
+\item \monobox{Futura-Boo} for
     {\fontspec[Scale=MatchLowercase]{Futura-Boo}upright book weight}
-\item \monobox{Futura-BooObl} for our
+\item \monobox{Futura-BooObl} for
     {\fontspec[Scale=MatchLowercase]{Futura-BooObl}oblique book weight}
 \item \monobox{FuturaSC-Boo} for
     {\fontspec[Scale=MatchLowercase]{FuturaSC-Boo}small caps, book weight}
