--- a/hello.tex
+++ b/hello.tex
@@ -117,7 +117,7 @@ gives
 \section{Commands}
 
 \LaTeX{} provides various commands to format your text,
-and you can define your own as well.
+and you can also define your own.
 Their names always begin with a backslash (\,\texttt{\textbackslash}\,),
 contain only letters, and are case-sensitive.\punckern\footnote{%
 % \verb doesn't play nicely in footnotes, so...
@@ -290,5 +290,5 @@ use upright type again.
 \end{quote}
 See? Back to normal.
 \end{leftfigure}
-Groups can also be used to handle the spacing oddities of zero-argument
+You can also use groups to prevent spacing oddities with zero-argument
 commands: some prefer \verb|{\LaTeX}| over \verb|\LaTeX{}|.
