--- a/installation.tex
+++ b/installation.tex
@@ -4,8 +4,8 @@
 When you install \LaTeX{} on your computer, it comes packaged as a
 \introduce{distribution} that contains:
 \begin{enumerate}
-\item \LaTeX, the program---the thing that turns text files into
-    documents.\footnote{Well, actually, multiple \LaTeX{} programs,
+\item \LaTeX, the program---the thing that turns markup into
+    typeset documents.\footnote{Well, actually, multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
     Packages are bundles of code that do all sorts of things,
@@ -26,7 +26,7 @@ Each major operating system has its own \LaTeX{} distribution:
 \item[Linux and BSD] use \TeX{} Live.
     Like most software, it is provided through your
     \acronym{os}'s package manager.
-    Linux distributions usually contain a \texttt{texlive-\allowbreak full}
+    Linux distributions usually offer a \texttt{texlive-\allowbreak full}
     or \texttt{texlive-\allowbreak most} package that installs everything
     you need.\punckern\footnote{%
     If you'd rather keep the install size down,
