--- a/punctuation.tex
+++ b/punctuation.tex
@@ -144,9 +144,9 @@ Launch in 2\,h 10\,m.
 \begin{itemize}
 \item Learn more commands for spacing, such as \verb|\:|, \verb|\;|,
     \verb|\enspace|, and \verb|\quad|.
-\item Use the \texttt{csquotes} package's \verb|\enquote| to simplify
-    nested quotations, e.g., \\
+\item Nest quotations, e.g.,
     \enquote{She exclaimed, \enquote{I can't believe it!}}
+    more easily with  \texttt{csquotes} package's \verb|\enquote| command.
 \item Discover the typographical origins of terms like \introduce{en},
     \introduce{em}, and \introduce{quad}.
 \item Familiarize yourself with the difference between \texttt{/} and
