--- a/troubleshooting.tex
+++ b/troubleshooting.tex
@@ -60,7 +60,7 @@ error message,\punckern\footnote{Usually this contains a succinct summary of
 the problem and the number of the line(s) it occurred on. Occasionally,
 \LaTeX{} gets \emph{really} confused and emits something so cryptic it gives
 \cpp{} template errors a run for their money.
-As you continue to use \LaTeX, you'll start to get a feel for what sorts of
+As you use \LaTeX, you'll start to get a feel for what sorts of
 mistakes cause these rare, but enigmatic messages.}
 then display an interactive prompt starting with \texttt{?}\,.
 Here you can enter instructions for how to proceed.
