--- a/why.tex
+++ b/why.tex
@@ -25,7 +25,7 @@ Do many books look this way? Why not?
 \begin{leftfigure}
 \fontspec[Scale=MatchUppercase]{KJV1611}\Large E Gorham St.
 \end{leftfigure}
-And why a very important switch in a spaceship might be labeled like this:
+And why a very important switch in a spaceship is labeled like this:
 \begin{leftfigure}
 \fontspec[Scale=MatchUppercase]{Futura-Med}CM/SM SEP
 \end{leftfigure}
@@ -94,7 +94,8 @@ but it comes with a few advantages:
 \item You can handle your writing's content and its presentation separately.
     At the start of each document,
     you describe the design you want.
-    \LaTeX{} takes it from there, consistently formatting your whole text.
+    \LaTeX{} takes it from there, consistently formatting your whole text
+    the way you asked.
     Compare this to a \acronym{wysiwyg} system,
     where you constantly deal with appearances
     as you write.
