--- a/textformatting.tex
+++ b/textformatting.tex
@@ -108,8 +108,8 @@ Smaller fonts aren't just shrunken versions of their big siblings---they
 have thicker strokes, exaggerated features,
 and more generous spacing to improve legibility at their size.
 \begin{leftfigure}
-\fontspec{lmroman5-regular} When I magnify 5 point type
-\lm and place the result next to 11 point type,
+\fontspec{lmroman5-regular} If I magnify 5 point type
+\lm so it's as tall as 11 point type,
 you can instantly see the differences.
 \end{leftfigure}
 Multiple optical sizes were standard back when fonts were made out of metal.
@@ -122,6 +122,7 @@ See \chapref{fonts} for more on font selection.}
 Points and optical sizes don't tell the whole story.
 Each typeface has different proportions which affect its perceived size.
 (Compare Garamond, {\fontspec{Latin Modern Roman} Latin Modern},
+{\fontspec{Futura-Boo}Futura},
 and {\fontspec{NHaasGroteskDSPro-45Lt}\addfontfeature{LetterSpace=3}Helvetica}, all at 11 points.)
 Shown below are some common terms:
 \begin{centerfigure}
@@ -155,7 +156,7 @@ between lines
 Note how without some extra space,
 or \introduce{leading},\punckern\footnote{This term comes from the days of
 metal type, when strips of lead or brass were inserted
-between lines to space them out.\endnote{Jan Middendorp, \textit{Shaping Text}
+between lines to space them out.\punckern\endnote{Jan Middendorp, \textit{Shaping Text}
 (Amsterdam, 2014), 71}}
 descenders from one line almost collide with ascenders and capitals on
 the next.
