Another read-through

--- a/back.tex
+++ b/back.tex
@@ -81,10 +81,9 @@ Available (for free!) at \https{practicaltypography.com}
 % From https://tex.stackexchange.com/a/24068/92465
 {\let\cleardoublepage\clearpage \chapter{Colophon}}
 
-This guide was typeset with \LuaLaTeX{} in Robert Slimbach's Garamond Premier.
-His revival is based on roman type by
-\otford{16}{th} century French
-punchcutter Claude Garamond.
+This guide was typeset with \LuaLaTeX{} in Robert Slimbach's Garamond Premier,
+a revival of roman type by \otford{16}{th} century French punchcutter
+Claude Garamond.
 Italics are inspired by the work of Garamond's contemporary Robert Granjon.
 
 Monospaced items are set in \texttt{Drive Mono},
@@ -93,9 +92,9 @@ designed by Elliott Amblard and Jérémie Hornus at Black Foundry.
 Captions use
 \textsf{\small Neue Haas Grotesk},
 a Helvetica restoration by Christian Schwartz.
-Other digitizations of the ubiquitous Swiss typeface are based on fonts made for
-Linotype and phototypesetting machines,
-resulting in digital versions with all the compromises and kludges from the
+Earlier digitizations of the ubiquitous Swiss typeface are based on fonts
+made for Linotype and phototypesetting machines,
+resulting in digital versions with needless compromises and kludges from the
 two previous generations of printing technology.
 Schwartz based his work on Helvetica's original drawings,
 producing a design faithful to the original cold metal type.
