--- a/hello.tex
+++ b/hello.tex
@@ -198,7 +198,7 @@ for actually printing it in your document. Respectively, they are:
 \end{lstlisting}
 \end{leftfigure}
 Regardless of whatever follows them,
-the caret (\,\texttt{\^{}}\,) and tilde (\,\~{}\,) always need braces.
+the caret (\,\texttt{\^{}}\,) and tilde (\,\texttt{\~{}}\,) always need braces.
 This is a relic from days when they produced \introduce{diacritical marks}:
 once upon a time, \LaTeX{} users would typeset ``jalapeño'' with
 \verb|jalape\~no|.
