--- a/history.tex
+++ b/history.tex
@@ -16,8 +16,8 @@ then arranged into lines.
 These lines were clamped together to form pages,
 which were inked and pressed against paper.
 
-By March of 1977, Knuth was ready for a second run of \acronym{taocp}, volume~2,
-but he was horrified when he received the proofs.
+In March of 1977, Knuth was ready for a second run of \acronym{taocp}, volume~2,
+but he was horrified when he saw the proofs.
 Hot metal typesetting is expensive, complicated, and time-consuming,
 so Knuth's publisher had replaced it with phototypesetting,
 a process that projects characters' images onto film.
@@ -28,8 +28,7 @@ expected.\punckern\endnote{Knuth, \textit{Digital Typography} (Stanford, 1999), 
 The average author would have resigned themselves to this change and moved on,
 but Knuth took great pride in his books' appearances,
 especially when it came to their mathematics.
-Around this time, he also discovered the growing field of digital typesetting.
-Inspired,
+Inspired by his recent discovery of the growing field of digital typesetting,
 Knuth set off on one of the greatest yak shaves\footnote{Programmers
 call seemingly-unrelated work needed to solve their main problem
 ``yak shaving''\quotekern. The phrase is thought to originate from an episode
@@ -116,7 +115,7 @@ Building \TeX{} today is an\dots{} interesting endeavor.
 When it was written in the late 1970s,
 there were no large, well-documented, open-source projects for computer science
 students to study,
-so Knuth set out to make \TeX{} into one.
+so Knuth set out to make one.
 As part of this effort, \TeX{} was written in a style he calls
 \introduce{literate programming}: opposite most programs---where
 documentation is interspersed throughout the code---Knuth wrote \TeX{} as a book,
