--- a/math.tex
+++ b/math.tex
@@ -8,8 +8,8 @@ The former is typed inside \verb|$...$| or \verb|\(...\)|,
 and the latter within \verb|\[...\]|.
 In these math environments, the rules of \LaTeX{} change:
 \begin{itemize}
-\item Most spaces and line breaks are ignored,
-    and spacing decisions are made for you based on
+\item Most spaces and line breaks are ignored.
+    Spacing decisions are made for you based on
     typographical conventions for mathematics.
     \verb|$x+y+z$| and \verb|$x + y + z$| both give you $x+y+z$.
 \item Empty lines are not allowed---each formula occupies a single
@@ -36,7 +36,7 @@ Given the breadth of modern mathematics,
 there are \emph{many} different commands and environments.
 You owe it to yourself to find some real references and learn what \LaTeX{}
 is capable of.
-Before moving on, though, let's show some examples of what it can do.
+Before moving on, though, let's see some examples of what it can do.
 \newpage
 
 \begin{enumerate}
