--- a/micro.tex
+++ b/micro.tex
@@ -29,7 +29,7 @@ Its use is automatic---for the vast majority of documents, you should add
 \end{lstlisting}
 \end{leftfigure}
 to your preamble and move on.
-But let's take a brief look at some things the package does.
+But let's take a quick look at what the package actually does.
 
 \section{Character protrusion}
 
@@ -55,7 +55,7 @@ into the margins.
 
 To give paragraphs more even spacing and fewer hyphenated lines,
 \texttt{microtype} can stretch characters horizontally.
-You might think that distorting the type this way would be immediately
+You might think that distorting type like this would be immediately
 noticeable,
 but you're reading a book that does so on every page!
 This effect, called \introduce{font expansion},
@@ -70,7 +70,7 @@ If you want to use it, you'll need \LuaLaTeX{}.
 \section{What next?}
 
 As always, see the package manual for ways to tweak these features.
-\texttt{microtype} is capable of a few other tricks,
+\texttt{microtype} has a few other tricks,
 but several only work on older \LaTeX{} engines.\punckern\footnote{i.e., pdf\TeX}
 Those we care about---such as letterspacing---can be handled with
 \texttt{fontspec} or other packages.
