--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -359,7 +359,7 @@ The author apologizes for any typos,
 f\raisebox{-0.1ex}{o}rmatt\raisebox{0.1ex}{i}ng mistakes,
 inaccuracies,
 and other flubs.
-He welcomes you to fix them in this book's Git repository at \\
+He welcomes fixes and improvements in this book's Git repository at \\
 \https{github.com/mrkline/latex-book}
 
 \vspace{\baselineskip}
