--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -3,7 +3,7 @@
 \section{Justification and alignment}
 
 \LaTeX{} justifies text remarkably well.
-Instead of arranging one line at a time---like most word processors,
+Instead of arranging it one line at a time---like most word processors,
 web browsers, and e-readers do---it considers every possible line break
 in a paragraph, then picks the ones that give the best overall
 spacing.\punckern\endnote{Donald E.~Knuth and Michael F.~Plass,
