--- a/punctuation.tex
+++ b/punctuation.tex
@@ -25,11 +25,11 @@ will get you
 Instead, use \texttt{\bfseries `} for opening quotes and \texttt{\bfseries '} for closing
 quotes.\punckern\footnote{If your keyboard happens to have keys for
 ``curly'' quotes (\,\texttt{“}\,\texttt{”}\,), feel free to use those instead!
-Also, don't use \texttt{"} for closing double quotes.
+And don't use \texttt{"} for closing double quotes.
 Not only does \texttt{``example"} look a bit unbalanced,
-but \texttt{"} is used as a formatting command when typesetting certain
-languages, like German. (See \chapref{i18n} for more on international
-typesetting.)}
+but \texttt{"} is used as a formatting command for some languages,
+like German.
+(See \chapref{i18n} for more on international typesetting.)}
 \begin{leftfigure}
 \begin{lstlisting}
 ``It depends on what the meaning of the word `is' is.''
@@ -55,7 +55,7 @@ serve different purposes.
     \begin{itemize}[leftmargin=*]
     \item They allow words to be split across the end of one line and the
         start of the next.
-        \LaTeX{} usually handles this automatically.
+        \LaTeX{} does this automatically.
     \item Compound words like \emph{long-range} and \emph{field-effect}
         use hyphens.
     \item They are used in phrasal adjectives.
