--- a/why.tex
+++ b/why.tex
@@ -34,7 +34,7 @@ Not like this:
 \fontspec{Pinyon Script}\Large CM/SM Sep
 \end{leftfigure}
 
-Effective written communication is about the shapes and layout of words,
+Effective written communication is about the look and layout of words,
 not just which ones you choose.
 Good typography isn't just art---it's function.
 And if you care about any of this,
