--- a/textformatting.tex
+++ b/textformatting.tex
@@ -110,7 +110,7 @@ and more generous spacing to improve legibility at their size.
 \begin{leftfigure}
 \fontspec{lmroman5-regular} If I magnify 5 point type
 \lm so it's as tall as 11 point type,
-you can instantly see the differences.
+you can easily see the differences.
 \end{leftfigure}
 Multiple optical sizes were standard back when fonts were made out of metal.
 But many digital fonts only have one,
