Feedback from Colin

--- a/back.tex
+++ b/back.tex
@@ -24,7 +24,7 @@ The \TeX{} Stack Exchange, at \https{tex.stackexchange.com/}
 
 \section{For typography}
 
-We've spent most of our time here focusing \emph{what} you can do with \LaTeX,
+We've spent most of our time here focusing on \emph{what} you can do with \LaTeX,
 and little on \emph{how} you should use it to create well-designed documents.
 Read on:
 \begin{leftfigure}
