--- a/history.tex
+++ b/history.tex
@@ -61,14 +61,15 @@ Several sources (\http{www.tug.org/whatis.html},
 \https{tug.org/interviews/thanh.html},
 \http{www.typophile.com/node/34620})
 mention \TeX's influence on the \textit{hz}-program by Peter Karow
-and Hermann Zapf, thanks to via Knuth's collaborations with Zapf.
+and Hermann Zapf, thanks to Knuth's collaborations with Zapf.
 \textit{hz} was later acquired by Adobe and used
 when creating InDesign's paragraph formatting systems.}}
 
-\LaTeX{}, short for Lamport~\TeX{}, was later developed by Leslie Lamport
-as a set of commands for common document layouts.
-It was introduced in 1986 with his guide,
-\textit{\LaTeX: A~Document Preparation System}.
+\LaTeX{}, short for Lamport~\TeX{}, was developed by Leslie Lamport in the
+early 1980s as a set of commands for common document layouts.
+He introduced it with his guide,
+\textit{\LaTeX: A~Document Preparation System},
+in 1986.
 Other typesetting systems based on \TeX{} also exist,
 such as Con\TeX{}t.
 
