--- a/international.tex
+++ b/international.tex
@@ -16,7 +16,7 @@ Today, most computer systems use Unicode to represent text. Briefly,
     character,
     or formatting information,
     such as an instruction to print subsequent text right-to-left.
-\item One or more of these code points combines to represent a
+\item One or more of these code points combine to represent a
     \introduce{grapheme cluster} or \introduce{glyph},
     the shapes within fonts that we informally call ``characters''\quotekern.
 \begin{centerfigure}
