--- a/structure.tex
+++ b/structure.tex
@@ -129,5 +129,5 @@ to customize nearly every aspect of your document,
 from heading fonts to footnotes.
 \item Include images with the \texttt{graphicx} package.
 \item Add hyperlinks with the \texttt{hyperref} package.
-\item Split large documents into multiple files using \verb|\input|.
+\item Split large documents into multiple source files using \verb|\input|.
 \end{itemize}
