Add ISBN for proofs of 2nd edition

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -352,6 +352,9 @@ so long as you give proper credit and provide your contributions under
 the same license. \\
 The license's full text is available at \\
 \https{creativecommons.org/licenses/by-sa/4.0/legalcode}
+\vspace{\baselineskip}
+
+ISBN 978-1-387-80513-6
 }
 \vfill
 
